fix arrow overlaping with links in computer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -72,6 +72,9 @@
 }
 
 @media (min-width: 768px) {
+	.footer {
+		margin-top: 20px;
+	}
 	.wrapper {
 		flex-direction: row;
 		justify-content: space-between;
@@ -86,6 +89,7 @@
 		order: 2;
 		justify-content: flex-end;
 		gap: 24px;
+		margin-right: 58px;
 	}
 }
 
